--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  flutter_native_splash: ^2.3.2
+  feather_icons: ^1.2.0
+    
+flutter_native_splash:
+    color: '#3336AB'
+    image: assets/imgs/logo-white.png
 
 dev_dependencies:
   flutter_test:
