--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,18 +81,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Outfit
-      fonts:
-        - asset: assets/fonts/Outfit-Black.ttf
-        - asset: assets/fonts/Outfit-Bold.ttf
-        - asset: assets/fonts/Outfit-ExtraBold.ttf
-        - asset: assets/fonts/Outfit-ExtraLight.ttf
-        - asset: assets/fonts/Outfit-Light.ttf
-        - asset: assets/fonts/Outfit-Medium.ttf
-        - asset: assets/fonts/Outfit-Regular.ttf
-        - asset: assets/fonts/Outfit-SemiBold.ttf
-        - asset: assets/fonts/Outfit-Thin.ttf
-  #
+  # fonts:
+  #   - family: Outfit
+  #     fonts:
+  #       - asset: assets/fonts/Outfit-Black.ttf
+  #       - asset: assets/fonts/Outfit-Bold.ttf
+  #       - asset: assets/fonts/Outfit-ExtraBold.ttf
+  # #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
