--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,12 +83,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Outfit
-  #     fonts:
-  #       - asset: assets/fonts/Outfit-Black.ttf
-  #       - asset: assets/fonts/Outfit-Bold.ttf
-  #       - asset: assets/fonts/Outfit-ExtraBold.ttf
+  fonts:
+    - family: EBIcons
+      fonts:
+        - asset: assets/fonts/ebayan/ebayan.ttf
   # #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
