--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.7
   page_transition: ^2.1.0
+  pin_code_fields: ^8.0.1
     
 flutter_native_splash:
     color: '#3336AB'
