--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^2.0.7
   page_transition: ^2.1.0
   pin_code_fields: ^8.0.1
+  just_the_tooltip: ^0.0.12
     
 flutter_native_splash:
     color: '#3336AB'
