--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   page_transition: ^2.1.0
   pin_code_fields: ^8.0.1
   just_the_tooltip: ^0.0.12
+  shared_preferences: ^2.2.1
     
 flutter_native_splash:
     color: '#3336AB'
