--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   shared_preferences: ^2.2.1
   font_awesome_flutter: ^10.5.0
   auto_size_text: ^3.0.0
+  firebase_core: ^2.17.0
+  firebase_auth: ^4.10.1
     
 flutter_native_splash:
     color: '#3336AB'
