--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
   flutter_native_splash: ^2.3.2
   feather_icons: ^1.2.0
   flutter_svg: ^2.0.7
@@ -47,6 +46,7 @@ dependencies:
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
   cloud_firestore: ^4.11.0
+  logger: ^2.0.2+1
 
     
 flutter_native_splash:
