--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   flutter_native_splash: ^2.3.2
   feather_icons: ^1.2.0
   flutter_svg: ^2.0.7
-  page_transition: ^2.1.0
   pin_code_fields: ^8.0.1
   just_the_tooltip: ^0.0.12
   shared_preferences: ^2.2.1
@@ -47,11 +46,11 @@ dependencies:
   firebase_auth: ^4.10.1
   cloud_firestore: ^4.11.0
   logger: ^2.0.2+1
+  lottie: ^2.7.0
 
-    
 flutter_native_splash:
-    color: '#3336AB'
-    image: assets/imgs/logo-white.png
+  color: '#3336AB'
+  image: assets/imgs/logo-white.png
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +68,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -79,6 +77,7 @@ flutter:
   assets:
     - assets/svgs/ebayan/
     - assets/svgs/illustration/
+    - assets/svgs/loading/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -96,7 +95,7 @@ flutter:
       fonts:
         - asset: assets/fonts/ebayan/ebayan.ttf
     - family: Outfit
-      fonts: 
+      fonts:
         - asset: assets/fonts/outfit/Outfit-Black.ttf
         - asset: assets/fonts/outfit/Outfit-Bold.ttf
         - asset: assets/fonts/outfit/Outfit-ExtraBold.ttf
