--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   flutter_svg: ^2.0.7
   pin_code_fields: ^8.0.1
   just_the_tooltip: ^0.0.12
-  shared_preferences: ^2.2.1
   font_awesome_flutter: ^10.5.0
   auto_size_text: ^3.0.0
   firebase_core: ^2.17.0
@@ -47,7 +46,11 @@ dependencies:
   cloud_firestore: ^4.11.0
   logger: ^2.0.2+1
   lottie: ^2.7.0
-  dots_indicator: ^2.1.1
+  dropdown_button2: ^2.3.9
+  bottom_picker: ^2.2.1
+  intl: ^0.18.1
+  file_picker: ^6.1.1
+  firebase_storage: ^11.4.1
 
 flutter_native_splash:
   color: '#3336AB'
