--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   lottie: ^2.7.0
   pin_code_fields: ^8.0.1
   tutorial_coach_mark: ^1.2.11
-
+  flutter_quill: ^8.6.4
 flutter_native_splash:
   color: '#3336AB'
   image: assets/imgs/logo-white.png
