--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_storage: ^11.4.1
   flutter_native_splash: ^2.3.2
   flutter_quill: ^8.6.4
+  flutter_slidable: ^3.0.1
   flutter_svg: ^2.0.7
   font_awesome_flutter: ^10.5.0
   # G
